--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "morgan": "^1.10.0"
   },
   "keywords": [],
